# whisper

./: .gitignore  README.md  build_app.sh  pyproject.toml  requirements.txt  setup.sh  setup_app.py  whisper_type.py
.claude/: settings.local.json
src/: app.py  audio.py  config.py  overlay.py  transcription.py
